syntax = "proto3";
package tx.v0;
option go_package = "kwil/api/protobuf/kwil/tx/v0/gen/go";

import "kwil/common/v0/executable.proto";

message GetExecutablesRequest {
    string name = 1;
    string owner = 2;
}

message GetExecutablesResponse {
    repeated common.v0.Executable executables = 1;
}

message GetExecutablesByIdRequest {
    string id = 1;
}